upgrades to junit 5. Closes #4